virtual reality in real estate and augmented reality in real estate remaining

--- a/css/style.css
+++ b/css/style.css
@@ -14005,3 +14005,6 @@ h2.vero-about-heading {
 .smart-room-virtual {
     background: linear-gradient(269.84deg, #000000 54.46%, #3C7494 154.18%);
 }
+
+/* Augumented Reality in Real Estate */
+
