--- a/css/style.css
+++ b/css/style.css
@@ -14008,3 +14008,118 @@ h2.vero-about-heading {
 
 /* Augumented Reality in Real Estate */
 
+.ar-real-estate-banner {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(../images/solutions/augmented-reality-in-real-estate/ar-real-estate-banner.webp);
+    background-size: cover;
+}
+
+.ar-real-estate-card {
+    background-color: #161719!important;
+    border-radius: 20px!important;
+    padding: 25px 20px;
+    height: 100%;
+}
+
+.ar-real-estate-video {
+    background: linear-gradient(269.84deg, #000000 54.46%, #3C7494 154.18%);
+}
+
+.ar-box {
+    width: 100%;
+    margin: 10px auto;
+    position: relative;
+    perspective: 1000px;
+}
+
+.ar-box .ar-front-face {
+    height: 250px;
+    background: #fff;
+    height: 220px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0px 5px 20px 0px rgb(0 81 250 / 10%);
+    transition: all 0.5s ease;
+    text-align: center;
+}
+
+.ar-box .ar-front-face .icon {
+    height: 80px;
+}
+
+.ar-box .ar-front-face .icon i, .ar-box .ar-front-face span {
+    background: #1A3341;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.ar-box .ar-back-face {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    height: 250px;
+    width: 100%;
+    padding: 30px;
+    color: #fff;
+    opacity: 0;
+    transform-style: preserve-3d;
+    backface-visibility: hidden;
+    background: #1A3341;
+    transform: translateY(110px) rotateX(-90deg);
+    box-shadow: 0px 5px 20px 0px rgb(0 81 250 / 10%);
+    transition: all 0.5s ease;
+}
+
+.ar-box .ar-front-face span, .ar-box .back-face h5 {
+    font-size: 22px;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.ar-box .ar-back-face p {
+    margin-top: 10px;
+}
+
+.ar-box:hover .ar-back-face {
+	opacity: 1;
+	transform: rotateX(0deg);
+}
+
+.ar-box:hover .ar-front-face {
+	opacity: 0;
+	transform: translateY(-110px) rotateX(90deg);
+}
+
+.ar-box .ar-front-face .icon i {
+    font-size: 65px;
+}
+
+.ar-box .ar-front-face {
+    height: 250px !important;
+}
+
+/* Virtual Reality in Real Estate */
+
+.vr-real-estate-banner {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(../images/solutions/virtual-reality-in-real-estate/vr-real-estate-banner.webp);
+    background-size: cover;
+}
+
+.vr-real-estate-banner h1 {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.2);
+    padding: 40px 40px;
+    border-radius: 20px;
+}
+
+.vr-real-estate-video {
+    background: linear-gradient(269.84deg, #000000 54.46%, #3C7494 154.18%);
+}
